syntax = "proto3";

option go_package = "github.com/muxable/transcoder/api";

import "google/protobuf/any.proto";

package api;

service Transcoder {
  rpc Publish(stream google.protobuf.Any) returns (stream google.protobuf.Any) {}
  rpc Subscribe(stream SubscribeRequest) returns (stream google.protobuf.Any) {}
}

message TranscodeRequest {
  string stream_id = 1;
  string track_id = 2;
  string rtp_stream_id = 3;
  
  string mime_type = 4;
  string gstreamer_pipeline = 5;
}

message SubscribeRequest {
  oneof operation {
    TranscodeRequest request = 1;
    google.protobuf.Any signal = 2;
  }
}